@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -58,7 +58,8 @@ public class WebConfiguration extends ConfigurationOptionProvider {
 
     private final ConfigurationOption<List<WildcardMatcher>> ignoreUrls = ConfigurationOption
         .builder(new ListValueConverter<>(new WildcardMatcherValueConverter()), List.class)
-        .key("ignore_urls")
+        .key("transaction_ignore_urls")
+        .aliasKeys("ignore_urls")
         .configurationCategory(HTTP_CATEGORY)
         .description("Used to restrict requests to certain URLs from being instrumented.\n" +
             "\n" +
