@@ -40,6 +40,8 @@ endif::[]
 * Add <<config-enabled,`enabled`>> flag
 * Add experimental support for Scala Futures
 * The agent now collects heap memory pools metrics - {pull}1228[#1228]
+* Deprecating `ignore_urls` config in favour of <<config-transaction-ignore-urls, `transaction_ignore_urls`>> to align
+  with other agents, while still allowing the old config name for backward compatibility - {pull}1315[#1315]
 
 [float]
 ===== Bug fixes
